# macchiatoBot

./: .env.example  .gitignore  AGENTS.md  MEMORY.md  README.md  README_EN.md  README_zh.md  agent_worker.py  automation_daemon.py  automation_worker.py  canvas_implementation_plan.md  canvas_integration_task.md  claude-progress.txt  config.example.yaml  feature_list.json  feishu_server.py  feishu_ws_gateway.py  init.sh  main.py  mcp_server.py  pyproject.toml  requirements.txt  skills-lock.json  test_demo.txt
.cursor/: environment.json
.github/workflows/: release.yml
config/: config.example.yaml  dashboard_auth.example.yaml
deploy/: PYPI.md  README.md  RELEASING.md  install-macchiato-remote.sh  publish-dist.sh  release-pypi.sh
deploy/nginx/: README.md  macchiato-dashboard-http.conf.in  macchiato-dashboard.conf.in  sports-locations.snippet
deploy/systemd/: 50-macchiato-proxy.conf  50-macchiato-resource-limits.conf  60-macchiato-needrestart.conf  install.sh  macchiato-automation.service.in  macchiato-dashboard.service.in  macchiato-feishu-gateway.service.in  macchiato-shuiyuan-connector.service.in  macchiato.target
docs/: ARCHITECTURE_CODE_REVIEW.md  AUTOMATION_ARCHITECTURE.md  PERMISSION_AUDIT_REPORT.md  PLANNING_CAPABILITY_RESEARCH.md  architecture.md  architecture_zh.md  canvas_integration_guide.md  feishu.md  feishu_zh.md  remote-workspace.md  remote-workspace_zh.md
scripts/: migrate_v1_planning_fields.py  smoke_bash_llm.py
src/agent/: config.py
src/agent_core/: bash_os_user.py  bash_runtime.py  bash_security.py  bash_user_env.py  config.py  job_manager.py
src/canvas_integration/: README.md  __init__.py  client.py  config.py  models.py
src/macchiato_bot_cli/: __init__.py  daemon.py  main.py
src/macchiato_remote/: __init__.py  cli.py  client.py  protocol.py  tokens.py
src/schedule_agent/: config.py
src/shuiyuan_integration/: __init__.py  client.py  connector.py  user_api_key.py
tests/: __init__.py  conftest.py  test_agent.py  test_agent_image_downgrade.py  test_agent_wake.py  test_anthropic_compat.py  test_ask_user_tool.py  test_attachment_sync.py  test_automation_canvas_connector.py  test_automation_config_sync.py  test_automation_core_gateway.py  test_automation_feishu_activity.py  test_automation_ipc.py  test_automation_tools.py  test_automation_workspace_identity.py  test_bash_job_notify.py  test_bash_job_notify_deliver.py  test_bash_os_user.py  test_bash_runtime.py  test_bash_tool.py  test_bash_user_env.py  test_billing.py  test_canvas_connection.py  test_canvas_quick.py  test_canvas_tool.py  test_chat_history_db.py  test_checkpoint_core_profile.py  test_cli.py  test_codex_oauth_provider.py  test_command_tools.py  test_config.py  test_context.py  test_core_owner_resolve.py  test_core_session_adapter.py  test_dashboard_auth.py  test_dashboard_server.py  test_e2e.py  test_feishu_ask_user_card.py  test_feishu_client.py  test_feishu_content_parser.py  (+76 more)
(+302 files in other folders)
