[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macchiato-bot"
version = "0.1.0"
description = "LLM schedule agent (tool-driven)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "cryptography>=42.0.0",
    "pydantic>=2.0",
    "python-dateutil>=2.8",
    "python-dotenv>=1.0",
    "markitdown>=0.1.0",
    "openai>=1.0",
    "httpx[socks]>=0.24",
    "mcp>=1.0",
    "markdown-it-py>=3.0.0",
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "lark-oapi>=1.0.0",
    "playwright>=1.49.0",
    "prompt_toolkit>=3.0",
    "rich>=14.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "isort>=5.12",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
