[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macchiato-bot"
version = "0.2.3"
description = "macchiatoBot — daemon-first, tool-driven LLM assistant with remote worker CLI"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "macchiatoBot contributors" }]
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "cryptography>=42.0.0",
    "pydantic>=2.0",
    "python-dateutil>=2.8",
    "python-dotenv>=1.0",
    "markitdown>=0.1.0",
    "openai>=1.0",
    "httpx[socks]>=0.24",
    "mcp>=1.0",
    "markdown-it-py>=3.0.0",
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "lark-oapi>=1.0.0",
    "playwright>=1.49.0",
    "litellm>=1.80",
    "prompt_toolkit>=3.0",
    "rich>=14.0",
    "websockets>=12.0",
]

[project.scripts]
macchiato = "macchiato_bot_cli.main:main"
macchiato-daemon = "macchiato_bot_cli.daemon:main"
macchiato-remote = "macchiato_remote.cli:main"
macchiato-dashboard = "frontend.dashboard.server:main"

[project.urls]
Homepage = "https://github.com/Osc-7/macchiatoBot"
Documentation = "https://github.com/Osc-7/macchiatoBot"
Repository = "https://github.com/Osc-7/macchiatoBot"
Issues = "https://github.com/Osc-7/macchiatoBot/issues"

[project.optional-dependencies]
# 向后兼容：此前用 macchiato-bot[remote] 安装 websockets；现 websockets 已在主依赖中
remote = []

[tool.uv.workspace]
members = ["packages/macchiato-remote"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "isort>=5.12",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"frontend.dashboard" = ["static/*.html", "static/*.css", "static/*.js"]

[tool.setuptools.packages.find]
where = ["src"]
